[package]
name = "lib-voxels-application"
version = "0.1.0"
edition = "2024"
description = "Rust language constructs for representing an application in the voxels game ecosystem"

[dependencies]
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
url = { version = "2.5.4", features = ["serde"] }
thiserror = "2.0.12"
dbus = { version = "0.9.7", features = ["futures"] }
dbus-tokio = "0.7.6"
