[package]
name = "lib-voxels-application"
version = "0.1.0"
edition = "2024"
description = "Rust language constructs for representing an application in the voxels game ecosystem"

[dependencies]
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
url = { version = "2.5.4", features = ["serde"] }
thiserror = "2.0.12"
dbus = { version = "0.9.7", features = ["futures"], optional = true }
dbus-tokio = { version = "0.7.6", optional = true }
tokio = { version = "1.46.1", features = ["full"], optional = true}
tokio-util = { version = "0.7.15", optional = true }

[features]
dbus = ["dep:dbus-tokio", "dep:tokio", "dep:dbus", "dep:tokio-util"]
all = ["dbus"]
